--- a/index.html
+++ b/index.html
@@ -44,12 +44,15 @@
 										<header class="major">
 											<h2>Introduction</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
-										<ul class="actions">
+										<p>Judi Provencal's White Dwarf Research Group operates at both the University of Delaware and Mount Cuba 
+										Astronomical Observatory (MCAO). The group uses asteroseismology to study pulsating white dwarfs in the hopes of 
+										gaining a deeper understanding of their formation and evolution. The group utilizes data from both Hubble 
+										and TESS, as well as ground-based data taken themselves using SARA Consortium telescopes or by the Whole Earth 
+										Telescope collaboration. Currently, the group is studying pulsating hydrogen- and helium-atmosphere white 
+										dwarfs, investigating the DB gap, and looking into how big data techniques can be applied to white dwarfs.</p>
+										<!-- <ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
-										</ul>
+										</ul> -->
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 								</div>
@@ -58,33 +61,34 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>Research Group</h2>
 								</header>
 								<ul class="features">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
 										<h3>Dr. Judi Provencal</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>Associate Professor, Director of Delaware Asteroseismic Center, Resident
+										Astronomer at MCAO. </p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>Millie Dill</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p> Fourth-year undergraduate student, working with Dr. Provencal since . Graduation expected Spring 2025. </p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-gem"></span>
 										<h3>Henry Sanford-Crane</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>Ph.D. student, working with Dr. Provencal since Spring 2022. Graduation expected Spring 2027. </p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-gem"></span>
 										<h3>Kaylee Grace</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>Ph.D. student, working with Dr. Provencal since Fall 2022. Graduation expected Spring 2027. </p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-gem"></span>
 										<h3>Zach Savery</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>Ph.D. student, working with Dr. Provencal since Fall 2022. Graduation expected Spring 2027. </p>
 									</li>
 								</ul>
 								<footer class="major">
@@ -158,7 +162,7 @@
 							</ul>
 						</section>
 						<section>
-							<h2>Etiam feugiat</h2>
+							<h2>Keep Up With Us!</h2>
 							<dl class="alt">
 								<dt>Address</dt>
 								<dd>Sharp Labratory, University of Delaware &bull; Newark, DE 19716 &bull; USA</dd>
