--- a/index.html
+++ b/index.html
@@ -65,35 +65,35 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
+										<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 										<h3>Dr. Judi Provencal</h3>
 										<p>Associate Professor, Director of Delaware Asteroseismic Center, Resident
 										Astronomer at MCAO. </p>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
+										<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 										<h3>Millie Dill</h3>
 										<p> Fourth-year undergraduate student, working with Dr. Provencal since . Graduation expected Spring 2025. </p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-gem"></span>
+										<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 										<h3>Henry Sanford-Crane</h3>
 										<p>Ph.D. student, working with Dr. Provencal since Spring 2022. Graduation expected Spring 2027. </p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-gem"></span>
+										<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 										<h3>Kaylee Grace</h3>
 										<p>Ph.D. student, working with Dr. Provencal since Fall 2022. Graduation expected Spring 2027. </p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-gem"></span>
+										<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 										<h3>Zach Savery</h3>
 										<p>Ph.D. student, working with Dr. Provencal since Fall 2022. Graduation expected Spring 2027. </p>
 									</li>
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="researchgroup.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -130,13 +130,13 @@
 								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="currentprojects.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
 							</section>
 
 						<!-- Get Started -->
-							<section id="cta" class="main special">
+							<!-- <section id="cta" class="main special">
 								<header class="major">
 									<h2>Congue imperdiet</h2>
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
@@ -148,29 +148,29 @@
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
-							</section>
+							</section> -->
 
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
+						<!-- <section>
 							<h2>Aliquam sed mauris</h2>
 							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn More</a></li>
 							</ul>
-						</section>
+						</section> -->
 						<section>
 							<h2>Keep Up With Us!</h2>
-							<dl class="alt">
+							<!-- <dl class="alt">
 								<dt>Address</dt>
 								<dd>Sharp Labratory, University of Delaware &bull; Newark, DE 19716 &bull; USA</dd>
-								<!-- <dt>Phone</dt>
+								<dt>Phone</dt>
 								<dd>(000) 000-0000 x 0000</dd>
 								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd> -->
-							</dl>
+								<dd><a href="#">information@untitled.tld</a></dd> 
+							</dl> -->
 							<ul class="icons">
 								<li><a href="https://www.instagram.com/mountcubaao/" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
 								<li><a href="https://www.facebook.com/mountcuba.org" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
