--- a/researchgroup.html
+++ b/researchgroup.html
@@ -37,8 +37,11 @@
 								<p>Henry's Bio</p>
 								<h2>Kaylee Grace (she/they)</h2>
 								<p>Kaylee's Bio</p>
-								<h2>Zach Savery</h2>
-								<p>Zach's Bio</p>
+								<h2>Zach Savery (he/him)</h2>
+								<p>Steven Zachery Savery is a second year graduate student at the University of Delaware, working with Judith L. Provencal to study white dwarfs. 
+								He got his undergraduate degree at the University of North Carolina Asheville, majoring in Physics with minors in Astronomy and Mathematics. He spent 
+								the majority of his life in North Carolina, but has also lived in Colorado and Maine. His interests include learning about history, science, playing 
+								video games, and watching sports. </p>
 							</section>
 
 					</div>
