--- a/currentprojects.html
+++ b/currentprojects.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>WDAC Current Research</title>
+		<title>WDAC Research Group</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -29,11 +29,19 @@
 						<!-- Content -->
 							<section id="content" class="main">
 								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
-								<h2>Magna feugiat lorem</h2>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
-								<p>Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Consequat leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit enim turpis lorem ipsum dolor sit amet feugiat. Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet est velit quis lorem.</p>
-								<h2>Tempus veroeros</h2>
-								<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
+								<h2>Dr. Judi Provencal</h2>
+								<p>Judi's Bio</p>
+								<h2>Millie Dill</h2>
+								<p>Millie's Bio</p>
+								<h2>Henry Sanford-Crane</h2>
+								<p>Henry's Bio</p>
+								<h2>Kaylee Grace (she/they)</h2>
+								<p>Kaylee's Bio</p>
+								<h2>Zach Savery (he/him)</h2>
+								<p>Zach’s research is currently focused on studying the DAV pulsating white dwarf, G29-38. G29-38 is an interesting object for not only being 
+								a pulsating white dwarf, but it’s also one of the first white dwarfs with a known debris disk. This research has involved studying ground and 
+								spaced-based optical lightcurves of G29-38, spanning from 1975 to 2023. The ground-based observations have involved the use of the Mount Cuba 
+								Observatory, the SARA Observatories, and PJMO, among many others. The space-based observations have been made by TESS. </p>
 							</section>
 
 					</div>
