--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 										<p>Ph.D. student, working with Dr. Provencal since Spring 2022. Graduation expected Spring 2027. </p>
 									</li>
 									<li>
-										<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+										<span class="image"><img src="images/Kaylee.jpg" alt="" /></span>
 										<h3>Kaylee Grace</h3>
 										<p>Ph.D. student, working with Dr. Provencal since Fall 2022. Graduation expected Spring 2027. </p>
 									</li>
