--- a/index.html
+++ b/index.html
@@ -65,28 +65,28 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+										<span class="image"><img src="images/pic01.jpg" width="300" height=auto alt="" /></span>
 										<h3>Dr. Judi Provencal</h3>
 										<p>Associate Professor, Director of Delaware Asteroseismic Center, Resident
 										Astronomer at MCAO. </p>
 									</li>
 									<li>
-										<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+										<span class="image"><img src="images/pic01.jpg" width="300" height=auto alt="" /></span>
 										<h3>Millie Dill</h3>
 										<p> Fourth-year undergraduate student, working with Dr. Provencal since . Graduation expected Spring 2025. </p>
 									</li>
 									<li>
-										<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+										<span class="image"><img src="images/pic01.jpg" width="300" height=auto alt="" /></span>
 										<h3>Henry Sanford-Crane</h3>
 										<p>Ph.D. student, working with Dr. Provencal since Spring 2022. Graduation expected Spring 2027. </p>
 									</li>
 									<li>
-										<span class="image"><img src="images/Kaylee.jpg" alt="" /></span>
+										<span class="image"><img src="images/Kaylee.jpg" width="300" height=auto alt="" /></span>
 										<h3>Kaylee Grace</h3>
 										<p>Ph.D. student, working with Dr. Provencal since Fall 2022. Graduation expected Spring 2027. </p>
 									</li>
 									<li>
-										<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+										<span class="image"><img src="images/pic01.jpg" width="300" height=auto alt="" /></span>
 										<h3>Zach Savery</h3>
 										<p>Ph.D. student, working with Dr. Provencal since Fall 2022. Graduation expected Spring 2027. </p>
 									</li>
