--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Current Work</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<p>Current ongoing research as well as outreach and education.</p>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
@@ -127,7 +126,9 @@
 										<strong>1,024</strong> Nullam
 									</li>
 								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
+								<p class="content">Dr. Provencal's group has several ongoing research projects which you can learn more about below. The group members are also educational associates at 
+								MCAO where they host Public, Family, and Children's Programs. They also use the 24" telescope in their research, as well as the upcoming 1.3-m telescope. Group members 
+								are also teaching assistants at the University of Delaware, where they have taught a variety of labs and discussion sections.</p>
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="currentprojects.html" class="button">Learn More</a></li>
