--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
 
 						<!-- Second Section -->
 							<section id="second" class="main special">
-								<header class="major">
+								<!-- <header class="major">
 									<h2>Current Work</h2>
 									<p>Current ongoing research as well as outreach and education.</p>
-								</header>
+								</header> -->
 								<ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-code-branch"></span>
@@ -126,7 +126,7 @@
 										<strong>1,024</strong> Nullam
 									</li>
 								</ul>
-								<p class="content">Dr. Provencal's group has several ongoing research projects which you can learn more about below. The group members are also educational associates at 
+								<p>Dr. Provencal's group has several ongoing research projects which you can learn more about below. The group members are also educational associates at 
 								MCAO where they host Public, Family, and Children's Programs. They also use the 24" telescope in their research, as well as the upcoming 1.3-m telescope. Group members 
 								are also teaching assistants at the University of Delaware, where they have taught a variety of labs and discussion sections.</p>
 								<footer class="major">
