--- a/index.html
+++ b/index.html
@@ -100,10 +100,9 @@
 
 						<!-- Second Section -->
 							<section id="second" class="main special">
-								<!-- <header class="major">
+								<header class="major">
 									<h2>Current Work</h2>
-									<p>Current ongoing research as well as outreach and education.</p>
-								</header> -->
+								</header>
 								<ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-code-branch"></span>
