--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
 								</header>
 								<ul class="statistics">
 									<li class="style1">
-										<span class="icon solid fa-code-branch"></span>
-										<strong>5,120</strong> Etiam
+										<span class="fa-solid fa-satellite"></span>
+										<strong>TESS</strong> Transiting Exoplanet Survey Satellite
 									</li>
 									<li class="style2">
-										<span class="icon fa-folder-open"></span>
-										<strong>8,192</strong> Magna
+										<span class="fa-solid fa-star"></span>
+										<strong>SARA</strong> Southeastern Association for Research in Astronomy
 									</li>
 									<li class="style3">
-										<span class="icon solid fa-signal"></span>
+										<span class="icon solid fa-laptop"</span>
 										<strong>2,048</strong> Tempus
 									</li>
 									<li class="style4">
