--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
 								</header>
 								<ul class="statistics">
 									<li class="style1">
-										<span class="fa-solid fa-satellite"></span>
+										<span class="fa-solid fa-satellite fa-xl"></span>
 										<strong>TESS</strong> Transiting Exoplanet Survey Satellite
 									</li>
 									<li class="style2">
-										<span class="fa-solid fa-star"></span>
+										<span class="fa-solid fa-star fa-xl"></span>
 										<strong>SARA</strong> Southeastern Association for Research in Astronomy
 									</li>
 									<li class="style3">
