--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									<li>
 										<span class="image"><img src="images/pic01.jpg" width="300" height=auto alt="" /></span>
 										<h3>Millie Dill</h3>
-										<p> Fourth-year undergraduate student, working with Dr. Provencal since . Graduation expected Spring 2025. </p>
+										<p> Fourth-year undergraduate student, working with Dr. Provencal since 2019. Graduation expected Spring 2025. </p>
 									</li>
 									<li>
 										<span class="image"><img src="images/pic01.jpg" width="300" height=auto alt="" /></span>
@@ -87,7 +87,7 @@
 										<p>Ph.D. student, working with Dr. Provencal since Fall 2022. Graduation expected Spring 2027. </p>
 									</li>
 									<li>
-										<span class="image"><img src="images/pic01.jpg" width="300" height=auto alt="" /></span>
+										<span class="image"><img src="images/Zach.jpg" width="300" height=auto alt="" /></span>
 										<h3>Zach Savery</h3>
 										<p>Ph.D. student, working with Dr. Provencal since Fall 2022. Graduation expected Spring 2027. </p>
 									</li>
@@ -127,8 +127,9 @@
 									</li>
 								</ul>
 								<p>Dr. Provencal's group has several ongoing research projects which you can learn more about below. The group members are also educational associates at 
-								MCAO where they host Public, Family, and Children's Programs. They also use the 24" telescope in their research, as well as the upcoming 1.3-m telescope. Group members 
-								are also teaching assistants at the University of Delaware, where they have taught a variety of labs and discussion sections.</p>
+								MCAO where they host Public, Family, and Children's Programs. They also use the 24" telescope in their research, as well as the 1.3-m telescope which should 
+								begin science operations in May 2024. Group members are also teaching assistants at the University of Delaware, where they have taught a variety of labs and 
+								discussion sections.</p>
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="currentprojects.html" class="button">Learn More</a></li>
