--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 								<ul class="statistics">
 									<li class="style1">
 										<span class="fa-solid fa-satellite fa-2xl fa-fw"></span>
-										<strong>TESS</strong> Transiting Exoplanet Survey Satellite
+										<strong>MCAO</strong> Mount Cuba Astronomical Observatory
 									</li>
 									<li class="style2">
 										<span class="fa-solid fa-star fa-2xl fa-fw"></span>
@@ -115,15 +115,15 @@
 									</li>
 									<li class="style3">
 										<span class="icon solid fa-laptop"</span>
-										<strong>2,048</strong> Tempus
+										<strong>Hubble</strong> Near-infrared, Visible, and Ultraviolet Observatory
 									</li>
 									<li class="style4">
 										<span class="icon solid fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
+										<strong>TESS</strong> Transiting Exoplanet Survey Satellite
 									</li>
 									<li class="style5">
 										<span class="icon fa-gem"></span>
-										<strong>1,024</strong> Nullam
+										<strong>Gaia</strong> Mapping Over One Billion Stars
 									</li>
 								</ul>
 								<p>Dr. Provencal's group has several ongoing research projects which you can learn more about below. The group members are also educational associates at 
