--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 										Astronomer at MCAO. </p>
 									</li>
 									<li>
-										<span class="image"><img src="images/pic01.jpg" width="300" height=auto alt="" /></span>
+										<span class="image"><img src="images/Millie.jpg" width="300" height=auto alt="" /></span>
 										<h3>Millie Dill</h3>
-										<p> Fourth-year undergraduate student, working with Dr. Provencal since 2019. Graduation expected Spring 2025. </p>
+										<p>Fourth-year undergraduate student, working with Dr. Provencal since Spring 2019. Graduation expected Spring 2025. </p>
 									</li>
 									<li>
 										<span class="image"><img src="images/pic01.jpg" width="300" height=auto alt="" /></span>
