--- a/index.html
+++ b/index.html
@@ -45,15 +45,14 @@
 										<header class="major">
 											<h2>Introduction</h2>
 										</header>
-										<p>Judi Provencal's White Dwarf Research Group operates at both the University of Delaware and Mount Cuba 
-										Astronomical Observatory (MCAO). The group uses asteroseismology to study pulsating white dwarfs in the hopes of 
+										<p>Judi Provencal's White Dwarf Research Group operates at both the University of Delaware and <a href="https://www.mountcuba.org/">
+										Mount Cuba Astronomical Observatory (MCAO)</a>.
+										The group uses asteroseismology to study pulsating white dwarfs in the hopes of 
 										gaining a deeper understanding of their formation and evolution. The group utilizes data from both Hubble 
-										and TESS, as well as ground-based data taken themselves using SARA Consortium telescopes or by the Whole Earth 
+										and TESS, as well as ground-based data taken themselves using <a href="https://www.saraobservatory.org/">
+										SARA Consortium</a> telescopes or by the Whole Earth 
 										Telescope collaboration. Currently, the group is studying pulsating hydrogen- and helium-atmosphere white 
 										dwarfs, investigating the DB gap, and looking into how big data techniques can be applied to white dwarfs.</p>
-										<!-- <ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
-										</ul> -->
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 								</div>
