--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 							<li><a href="#intro" class="active">Introduction</a></li>
 							<li><a href="#first">Research Group</a></li>
 							<li><a href="#second">Current Work</a></li>
-							<!-- <li><a href="#cta">Get Started</a></li> -->
 						</ul>
 					</nav>
 
@@ -46,13 +45,12 @@
 											<h2>Introduction</h2>
 										</header>
 										<p>Judi Provencal's White Dwarf Research Group operates at both the University of Delaware and <a href="https://www.mountcuba.org/">
-										Mount Cuba Astronomical Observatory (MCAO)</a>.
-										The group uses asteroseismology to study pulsating white dwarfs in the hopes of 
-										gaining a deeper understanding of their formation and evolution. The group utilizes data from both Hubble 
-										and TESS, as well as ground-based data taken themselves using <a href="https://www.saraobservatory.org/">
-										SARA Consortium</a> telescopes or by the Whole Earth 
-										Telescope collaboration. Currently, the group is studying pulsating hydrogen- and helium-atmosphere white 
-										dwarfs, investigating the DB gap, and looking into how big data techniques can be applied to white dwarfs.</p>
+										Mount Cuba Astronomical Observatory (MCAO)</a>. The group uses asteroseismology to study pulsating white 
+										dwarfs in the hopes of gaining a deeper understanding of their formation and evolution. The group utilizes 
+										data from both Hubble and TESS, as well as ground-based data taken themselves using <a href="https://www.saraobservatory.org/">
+										SARA Consortium</a> telescopes or by the Whole Earth Telescope collaboration. Currently, the group is studying 
+										pulsating hydrogen- and helium-atmosphere white dwarfs, investigating the DB gap, and looking into how big data 
+										techniques can be applied to white dwarfs.</p>
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 								</div>
@@ -65,7 +63,7 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="image"><img src="images/pic01.jpg" width="300" height=auto alt="" /></span>
+										<span class="image"><img src="images/Judi.jpg" width="300" height=auto alt="" /></span>
 										<h3>Dr. Judi Provencal</h3>
 										<p>Associate Professor, Director of Delaware Asteroseismic Center, Resident
 										Astronomer at MCAO. </p>
@@ -76,7 +74,7 @@
 										<p>Fourth-year undergraduate student, working with Dr. Provencal since Spring 2019. Graduation expected Spring 2025. </p>
 									</li>
 									<li>
-										<span class="image"><img src="images/pic01.jpg" width="300" height=auto alt="" /></span>
+										<span class="image"><img src="images/Henry.jpg" width="300" height=auto alt="" /></span>
 										<h3>Henry Sanford-Crane</h3>
 										<p>Ph.D. student, working with Dr. Provencal since Spring 2022. Graduation expected Spring 2027. </p>
 									</li>
