--- a/researchgroup.html
+++ b/researchgroup.html
@@ -20,7 +20,6 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Research Group</h1>
-						<!-- <p>Ipsum dolor sit amet nullam</p> -->
 					</header>
 
 				<!-- Main -->
@@ -28,7 +27,7 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
+								<!--span class="image main"><img src="images/pic04.jpg" alt="" /></span-->
 								<h2>Dr. Judi Provencal</h2>
 								<p>Judi's Bio</p>
 								
@@ -39,9 +38,9 @@
 								<p>Henry's Bio</p>
 								
 								<h2>Kaylee Grace (she/they)</h2>
-								<p><a href="https://kaygrace.github.io/">Kaylee Grace</a> is a second-year graduate student at the University of Delaware, where she works with Dr. Provencal. They got their undergraduate degrees in 
-								Physics (B.S., Honors) and Women’s Gender and Sexuality Studies (B.A.) from the University of Connecticut, with a minor in Astrophysics. In her free 
-								time, you can find her reading, playing cozy games, and cross-stitching.
+								<p><a href="https://kaygrace.github.io/">Kaylee Grace</a> is a second-year graduate student at the University of Delaware, where she works with Dr. 
+								Provencal. They got their undergraduate degrees in Physics (B.S., Honors) and Women’s Gender and Sexuality Studies (B.A.) from the University of 
+								Connecticut, with a minor in Astrophysics. In her free time, you can find her reading, playing cozy games, and cross-stitching.
 </p>
 								<h2>Zach Savery (he/him)</h2>
 								<p><a href="https://orcid.org/0009-0003-5777-092X">Steven Zachery Savery</a> is a second year graduate student at the University of Delaware, working with Judith L. Provencal to study white dwarfs. 
@@ -54,23 +53,8 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<!-- <section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
-						</section> -->
 						<section>
 							<h2>Keep Up With Us!</h2>
-							<!-- <dl class="alt">
-								<dt>Address</dt>
-								<dd>Sharp Labratory, University of Delaware &bull; Newark, DE 19716 &bull; USA</dd>
-								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
-								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd> 
-							</dl> -->
 							<ul class="icons">
 								<li><a href="https://www.instagram.com/mountcubaao/" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
 								<li><a href="https://www.facebook.com/mountcuba.org" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
