--- a/currentprojects.html
+++ b/currentprojects.html
@@ -20,7 +20,6 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Current Research</h1>
-						<!-- <p>Ipsum dolor sit amet nullam</p> -->
 					</header>
 
 				<!-- Main -->
@@ -28,7 +27,7 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
+								<!--span class="image main"><img src="images/pic04.jpg" alt="" /></span-->
 								<h2>Dr. Judi Provencal</h2>
 								<p>Judi's Bio</p>
 								<h2>Millie Dill</h2>
@@ -36,7 +35,9 @@
 								<h2>Henry Sanford-Crane</h2>
 								<p>Henry's Bio</p>
 								<h2>Kaylee Grace (she/they)</h2>
-								<p>Kaylee's Bio</p>
+								<p>Kaylee is currently studying pulsating Helium atmosphere white dwarf GD 358. Combining 35 years of archival data with two years of TESS data
+								and recent ground-based data taken by herself and friends (shoutout to Patrick, Tali, and Easton!) she is working to create updated asteroseismic
+								and spectral models of the star. She hopes to expand to other DBVs in the near future! </p>
 								<h2>Zach Savery (he/him)</h2>
 								<p>Zach’s research is currently focused on studying the DAV pulsating white dwarf, G29-38. G29-38 is an interesting object for not only being 
 								a pulsating white dwarf, but it’s also one of the first white dwarfs with a known debris disk. This research has involved studying ground and 
@@ -46,25 +47,20 @@
 
 					</div>
 
+				<!-- Recent Work -->
+							<section id="content" class="main">
+							<h2>AAS Posters 2024</h2>
+							<p><a href="https://aas243-aas.ipostersessions.com/?s=C5-2C-45-F3-D9-00-FB-DE-66-9B-FC-DF-97-FE-E3-39"><span>Judi's Poster\n</span></a>
+							<a href="https://aas243-aas.ipostersessions.com/?s=2D-F3-A0-1A-59-80-39-58-5A-51-00-3B-8C-33-09-92"><span>Kaylee's Poster\n</span></a>
+							<a href="https://aas243-aas.ipostersessions.com/?s=58-86-91-D5-12-3D-3E-BE-60-C2-FE-81-DC-DA-E1-D2"><span>Zach's Poster</span></a></p>
+							</section>
+
+					</div>
+
 				<!-- Footer -->
 					<footer id="footer">
-						<!-- <section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
-						</section> -->
 						<section>
 							<h2>Keep Up With Us!</h2>
-							<!-- <dl class="alt">
-								<dt>Address</dt>
-								<dd>Sharp Labratory, University of Delaware &bull; Newark, DE 19716 &bull; USA</dd>
-								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
-								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd> 
-							</dl> -->
 							<ul class="icons">
 								<li><a href="https://www.instagram.com/mountcubaao/" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
 								<li><a href="https://www.facebook.com/mountcuba.org" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
