--- a/currentprojects.html
+++ b/currentprojects.html
@@ -47,7 +47,13 @@
 
 					</div>
 
+				<!-- Header -->
+					<header id="header">
+						<h1>Recent Posters and Publications</h1>
+					</header>
+
 				<!-- Recent Work -->
+					<div id="main">
 							<section id="content" class="main">
 							<h2>AAS Posters 2024</h2>
 							<p><a href="https://aas243-aas.ipostersessions.com/?s=C5-2C-45-F3-D9-00-FB-DE-66-9B-FC-DF-97-FE-E3-39"><span>Judi's Poster\n</span></a>
