--- a/currentprojects.html
+++ b/currentprojects.html
@@ -56,8 +56,8 @@
 					<div id="main">
 							<section id="content" class="main">
 							<h2>AAS Posters 2024</h2>
-							<p><a href="https://aas243-aas.ipostersessions.com/?s=C5-2C-45-F3-D9-00-FB-DE-66-9B-FC-DF-97-FE-E3-39"><span>Judi's Poster\n</span></a>
-							<a href="https://aas243-aas.ipostersessions.com/?s=2D-F3-A0-1A-59-80-39-58-5A-51-00-3B-8C-33-09-92"><span>Kaylee's Poster\n</span></a>
+							<p><a href="https://aas243-aas.ipostersessions.com/?s=C5-2C-45-F3-D9-00-FB-DE-66-9B-FC-DF-97-FE-E3-39"><span>Judi's Poster</span></a> <br>
+							<a href="https://aas243-aas.ipostersessions.com/?s=2D-F3-A0-1A-59-80-39-58-5A-51-00-3B-8C-33-09-92"><span>Kaylee's Poster</span></a> <br>
 							<a href="https://aas243-aas.ipostersessions.com/?s=58-86-91-D5-12-3D-3E-BE-60-C2-FE-81-DC-DA-E1-D2"><span>Zach's Poster</span></a></p>
 							</section>
 
