--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 								</ul>
 								<p>Dr. Provencal's group has several ongoing research projects which you can learn more about below. The group members are also educational associates at 
 								MCAO where they host Public, Family, and Children's Programs. They also use the 24" telescope in their research, as well as the 1.3-m telescope which should 
-								begin science operations in May 2024. Group members are also teaching assistants at the University of Delaware, where they have taught a variety of labs and 
+								begin science operations in Summer 2024. Group members are also teaching assistants at the University of Delaware, where they have taught a variety of labs and 
 								discussion sections.</p>
 								<footer class="major">
 									<ul class="actions special">
