--- a/index.html
+++ b/index.html
@@ -103,23 +103,23 @@
 								</header>
 								<ul class="statistics">
 									<li class="style1">
-										<span class="fa-solid fa-satellite fa-2xl fa-fw"></span>
+										<span class="image"><img src="images/SARA.svg" width="40" height=auto alt="" /></span>
 										<strong>MCAO</strong> Mount Cuba Astronomical Observatory
 									</li>
 									<li class="style2">
-										<span class="fa-solid fa-star fa-2xl fa-fw"></span>
+										<span class="image"><img src="images/SARA.svg" width="40" height=auto alt="" /></span>
 										<strong>SARA</strong> Southeastern Association for Research in Astronomy
 									</li>
 									<li class="style3">
-										<span class="icon solid fa-laptop"</span>
+										<span class="image"><img src="images/SARA.svg" width="40" height=auto alt="" /></span>
 										<strong>Hubble</strong> Near-infrared, Visible, and Ultraviolet Observatory
 									</li>
 									<li class="style4">
-										<span class="icon solid fa-laptop"></span>
+										<span class="image"><img src="images/SARA.svg" width="40" height=auto alt="" /></span>
 										<strong>TESS</strong> Transiting Exoplanet Survey Satellite
 									</li>
 									<li class="style5">
-										<span class="icon fa-gem"></span>
+										<span class="image"><img src="images/SARA.svg" width="40" height=auto alt="" /></span>
 										<strong>Gaia</strong> Mapping Over One Billion Stars
 									</li>
 								</ul>
