--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 								</header>
 								<ul class="statistics">
 									<li class="style1">
-										<span class="image"><img src="images/SARA.svg" width="40" height=auto alt="" /></span>
+										<span class="image"><img src="images/MCAOLogo.png" width="100" height=auto alt="" /></span>
 										<strong>MCAO</strong> Mount Cuba Astronomical Observatory
 									</li>
 									<li class="style2">
