--- a/index.html
+++ b/index.html
@@ -103,23 +103,23 @@
 								</header>
 								<ul class="statistics">
 									<li class="style1">
-										<span class="image"><img src="images/MCAOLogo.png" width="100" height=auto alt="" /></span>
+										<span class="image"><img src="images/MCAOLogo.png" height="100" width=auto alt="" /></span>
 										<strong>MCAO</strong> Mount Cuba Astronomical Observatory
 									</li>
 									<li class="style2">
-										<span class="image"><img src="images/SARA.svg" width="125" height=auto alt="" /></span>
+										<span class="image"><img src="images/SARA.svg" height="100" width=auto alt="" /></span>
 										<strong>SARA</strong> Southeastern Association for Research in Astronomy
 									</li>
 									<li class="style3">
-										<span class="image"><img src="images/Hubble.svg" width="125" height=auto alt="" /></span>
+										<span class="image"><img src="images/Hubble.svg" height="100" width=auto alt="" /></span>
 										<strong>Hubble</strong> Near-infrared, Visible, and Ultraviolet Observatory
 									</li>
 									<li class="style4">
-										<span class="image"><img src="images/TESS.svg" width="125" height=auto alt="" /></span>
+										<span class="image"><img src="images/TESS.svg" height="100" width=auto alt="" /></span>
 										<strong>TESS</strong> Transiting Exoplanet Survey Satellite
 									</li>
 									<li class="style5">
-										<span class="image"><img src="images/Gaia.svg" width="125" height=auto alt="" /></span>
+										<span class="image"><img src="images/Gaia.svg" height="100" width=auto alt="" /></span>
 										<strong>Gaia</strong> Mapping Over One Billion Stars
 									</li>
 								</ul>
