--- a/currentprojects.html
+++ b/currentprojects.html
@@ -29,15 +29,16 @@
 							<section id="content" class="main">
 								<!--span class="image main"><img src="images/pic04.jpg" alt="" /></span-->
 								<h2>Dr. Judi Provencal</h2>
-								<p>Judi's Bio</p>
+								<p>Judi is currently undertaking a project to narrow down the temperature of the hot edge of the Helium atmosphere pulsation instabililty strip.</p>
 								<h2>Millie Dill</h2>
-								<p>Millie's Bio</p>
+								<p>Millie studies two pulsating Hydrogen atmosphere pulsating white dwarfs, HL Tau 76 and EC 14012-1446. She has been studying 50 years of data on 
+								these stars, and hopes to undertake convective light curve fitting as she moves into a Ph.D. program.</p>
 								<h2>Henry Sanford-Crane</h2>
-								<p>Henry's Bio</p>
+								<p>Henry uses GAIA data in his work.</p>
 								<h2>Kaylee Grace (she/they)</h2>
-								<p>Kaylee is currently studying pulsating Helium atmosphere white dwarf GD 358. Combining 35 years of archival data with two years of TESS data
-								and recent ground-based data taken by herself and friends (shoutout to Patrick, Tali, and Easton!) she is working to create updated asteroseismic
-								and spectral models of the star. She hopes to expand to other DBVs in the near future! </p>
+								<p>Kaylee is currently studying pulsating Helium atmosphere white dwarf GD 358. Combining 35 years of archival data with three years of TESS data
+								and recent ground-based data taken by herself and collaborators she is working to create updated asteroseismic
+								and spectral models of the star. She has begun to expand to other DBVs and will be doing full spectral modeling soon! </p>
 								<h2>Zach Savery (he/him)</h2>
 								<p>Zach’s research is currently focused on studying the DAV pulsating white dwarf, G29-38. G29-38 is an interesting object for not only being 
 								a pulsating white dwarf, but it’s also one of the first white dwarfs with a known debris disk. This research has involved studying ground and 
@@ -55,6 +56,11 @@
 				<!-- Recent Work -->
 					<div id="main">
 							<section id="content" class="main">
+							<h2>AAS Posters 2025</h2>
+							<p><a href="https://aas245-aas.ipostersessions.com/?s=D2-6C-D8-CF-C3-62-18-99-5D-03-3C-AC-ED-6D-0E-67"><span>Millie's Poster</span></a> <br>
+							<a href="https://aas245-aas.ipostersessions.com/?s=6C-39-43-28-F8-0B-3A-3A-2A-BC-22-AB-4C-7F-B2-AA"><span>Kaylee's Poster</span></a> <br>
+							<a href="https://aas245-aas.ipostersessions.com/?s=1B-F4-E4-D6-3D-7A-16-37-29-F7-B4-9D-15-52-F0-50"><span>Zach's Poster</span></a></p>
+								
 							<h2>AAS Posters 2024</h2>
 							<p><a href="https://aas243-aas.ipostersessions.com/?s=C5-2C-45-F3-D9-00-FB-DE-66-9B-FC-DF-97-FE-E3-39"><span>Judi's Poster</span></a> <br>
 							<a href="https://aas243-aas.ipostersessions.com/?s=2D-F3-A0-1A-59-80-39-58-5A-51-00-3B-8C-33-09-92"><span>Kaylee's Poster</span></a> <br>
