--- a/index.html
+++ b/index.html
@@ -88,6 +88,21 @@
 										<h3>Zach Savery</h3>
 										<p>Ph.D. student, working with Dr. Provencal since Fall 2022. Graduation expected Spring 2028. </p>
 									</li>
+									<li>
+										<span class="image"><img src="images/Ben.jpg" width="300" height=auto alt="" /></span>
+										<h3>Ben Mayhew</h3>
+										<p>Undergraduate student, working with Dr. Provencal since Summer 2024. Graduating Spring 2025. </p>
+									</li>
+									<li>
+										<span class="image"><img src="images/Levi.jpg" width="300" height=auto alt="" /></span>
+										<h3>Levi Yost</h3>
+										<p>Undergraduate student, working with Dr. Provencal since Spring 2025. Graduating Spring 2025. </p>
+									</li>
+									<li>
+										<span class="image"><img src="images/Evelyn.jpg" width="300" height=auto alt="" /></span>
+										<h3>Evelyn Palmer</h3>
+										<p>Undergraduate student, working with Dr. Provencal since Spring 2025. Graduation Expected Spring 2028. </p>
+									</li>
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
