--- a/researchgroup.html
+++ b/researchgroup.html
@@ -51,6 +51,15 @@
 								He got his undergraduate degree at the University of North Carolina Asheville, majoring in Physics with minors in Astronomy and Mathematics. He spent 
 								the majority of his life in North Carolina, but has also lived in Colorado and Maine. His interests include learning about history, science, playing 
 								video games, and watching sports. </p>
+
+								<h2>Ben Mayhew</h2>
+								<p>Ben is a senior undergraduate student at the University of Delaware working with Dr. Provencal.</p>
+
+								<h2>Levi Yost</h2>
+								<p>Levi is a senior undergraduate student at the University of Delaware working with Dr. Provencal.</p>
+
+								<h2>Evelyn Palmer</h2>
+								<p>Evelyn is a freshman undergraduate student at the University of Delaware working with Dr. Provencal.</p>
 							</section>
 
 					</div>
