--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 										<p>Fourth-year undergraduate student, working with Dr. Provencal since Spring 2019. Graduating Spring 2025. </p>
 									</li>
 									<li>
-										<span class="image"><img src="images/Henry.jpg" width="300" height=auto alt="" /></span>
+										<span class="image"><img src="images/Henry.jpeg" width="300" height=auto alt="" /></span>
 										<h3>Henry Sanford-Crane</h3>
 										<p>Ph.D. student, working with Dr. Provencal since Spring 2022. Graduation expected Spring 2028. </p>
 									</li>
