--- a/researchgroup.html
+++ b/researchgroup.html
@@ -39,7 +39,9 @@
 								time, I enjoy being around friends and playing my piano. </p>
 								
 								<h2>Henry Sanford-Crane</h2>
-								<p>Henry is a third year Ph.D. student working with Dr. Provencal. In his free time you can find him working on his farm, or spending time with his three grandchildren.</p>
+								<p>I am a third year Ph.D. student working with Dr. Provencal. With 45 years of experience in  process development engineering, I specialize in CMP
+								technology and bring a wealth of expertise to the field. I hold a Master’s degree in Physics (2023) and am currently pursuing a PhD, focusing on the 
+								spectral evolution of white dwarfs. In my free time you can find me working on my farm, or spending time with my three grandchildren.</p>
 								
 								<h2>Kaylee Grace (she/they)</h2>
 								<p><a href="https://kaygrace.github.io/">Kaylee Grace</a> is a third-year graduate student at the University of Delaware, where she works with Dr. 
