--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>White Dwarfs are Cool</h1>
-						<p>Judi Provencal's White Dwarf Research Group</p>
+						<p>Dr. Judi Provencal's White Dwarf Research Group</p>
 					</header>
 
 				<!-- Nav -->
@@ -31,6 +31,7 @@
 							<li><a href="#intro" class="active">Introduction</a></li>
 							<li><a href="#first">Research Group</a></li>
 							<li><a href="#second">Current Work</a></li>
+							<li><a href="wet.html" class="button">XCOV31</a></li>
 						</ul>
 					</nav>
 
@@ -206,3 +207,4 @@
 
 	</body>
 </html>
+
