--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<li><a href="#intro" class="active">Introduction</a></li>
 							<li><a href="#first">Research Group</a></li>
 							<li><a href="#second">Current Work</a></li>
-							<li><a href="wet.html" class="button">XCOV31</a></li>
+							<li><a href="wet.html">XCOV31</a></li>
 						</ul>
 					</nav>
 
@@ -207,4 +207,5 @@
 
 	</body>
 </html>
+
 
