--- a/wet.html
+++ b/wet.html
@@ -29,6 +29,7 @@
 							<section id="content" class="main">
 								<!--span class="image main"><img src="images/pic04.jpg" alt="" /></span-->
 								<h2>General Run Information</h2>
+								<p>This Whole Earth Telescope (WET) observation campaign is focused on studying the morphology of the debris disk around the pulsating hydrogen atmosphere (DAV) white dwarf G29-38.</p>
 							</section>
 
               <section id="content" class="main">
