--- a/wet.html
+++ b/wet.html
@@ -42,7 +42,11 @@
 								<h2>Light curves</h2>
 								<p>We will update the complete campaign light curve after the data from each telescope's night of observation has been received and reduced by the Headquarters using the Maestro (Dalessio 2010) and Wqed (Thompson and Mullally 2013) software packages.</p>
 							</section>
-            
+            <section id="content" class="main">
+								<!--span class="image main"><img src="images/pic04.jpg" alt="" /></span-->
+								<h2>Telescopes</h2>
+								<p>The telescopes providing observations to this campaign are listed below.</p>
+							</section>
 
 					</div>
 
