--- a/wet.html
+++ b/wet.html
@@ -46,7 +46,10 @@
             <section id="content" class="main">
 								<!--span class="image main"><img src="images/pic04.jpg" alt="" /></span-->
 								<h2>Telescopes</h2>
-								<p>The telescopes providing observations to this campaign are listed below.</p>
+								<p>The telescopes providing observations to this campaign are listed below.
+								<table>
+									<tr><th>Telescope</th><th>Type</th><th>Location</th></tr>
+								</table></p>
 							</section>
 
 					</div>
