--- a/wet.html
+++ b/wet.html
@@ -49,6 +49,7 @@
 								<p>The telescopes providing observations to this campaign are listed below.
 								<table>
 									<tr><th>Telescope</th><th>Type</th><th>Location</th></tr>
+									<td><th>Gemini South</th><th>Infrared</th><th>Cerro Tololo Inter-American Observatory (CTIO), Chile</th></td>
 								</table></p>
 							</section>
 
