--- a/wet.html
+++ b/wet.html
@@ -50,6 +50,7 @@
 								<table>
 									<tr><th>Telescope</th><th>Type</th><th>Location</th></tr>
 									<tr><td>Gemini South</td><td>Infrared</td><td>Cerro Tololo Inter-American Observatory (CTIO), Chile</td></tr>
+									<tr><td>National Astronomical Observatory San Pedro Martir (OAN-SPM)</td><td>Infrared</td><td>Baja California, Mexico</td></tr>
 								</table></p>
 							</section>
 
