--- a/wet.html
+++ b/wet.html
@@ -51,6 +51,8 @@
 									<tr><th>Telescope</th><th>Type</th><th>Location</th></tr>
 									<tr><td>Gemini South</td><td>Infrared</td><td>Cerro Tololo Inter-American Observatory (CTIO), Chile</td></tr>
 									<tr><td>National Astronomical Observatory San Pedro Martir (OAN-SPM)</td><td>Infrared</td><td>Baja California, Mexico</td></tr>
+									<tr><td>Calar Alto Observatory (CAHA)</td><td>Infrared</td><td>Andalucia, Spain</td></tr>
+									<tr><td>Haleakala 2-meter, Las Cumbres Observatory (LCO) global telescope network</td><td>Infrared</td><td>Haleakala, Hawaii</td></tr>
 								</table></p>
 							</section>
 
