--- a/wet.html
+++ b/wet.html
@@ -53,6 +53,9 @@
 									<tr><td>National Astronomical Observatory San Pedro Martir (OAN-SPM)</td><td>Infrared</td><td>Baja California, Mexico</td></tr>
 									<tr><td>Calar Alto Observatory (CAHA)</td><td>Infrared</td><td>Andalucia, Spain</td></tr>
 									<tr><td>Haleakala 2-meter, Las Cumbres Observatory (LCO) global telescope network</td><td>Infrared</td><td>Haleakala, Hawaii</td></tr>
+									<tr><td>Teide 1-meter, LCO</td><td>Optical</td><td>Tenerife, Spain</td></tr>
+									<tr><td>McDonald 1-meter, LCO</td><td>Optical</td><td>Fort Davis, Texas</td></tr>
+									<tr><td>CTIO 1-meter, LCO</td><td>Optical</td><td>Cerro Tololo Inter-American Observatory (CTIO), Chile</td></tr>
 								</table></p>
 							</section>
 
