--- a/wet.html
+++ b/wet.html
@@ -55,7 +55,10 @@
 									<tr><td>Haleakala 2-meter, Las Cumbres Observatory (LCO) global telescope network</td><td>Infrared</td><td>Haleakala, Hawaii</td></tr>
 									<tr><td>Teide 1-meter, LCO</td><td>Optical</td><td>Tenerife, Spain</td></tr>
 									<tr><td>McDonald 1-meter, LCO</td><td>Optical</td><td>Fort Davis, Texas</td></tr>
-									<tr><td>CTIO 1-meter, LCO</td><td>Optical</td><td>Cerro Tololo Inter-American Observatory (CTIO), Chile</td></tr>
+									<tr><td>CTIO 1-meter, LCO</td><td>Optical</td><td>CTIO, Chile</td></tr>
+									<tr><td>Kitt Peak 0.9-meter, Southeastern Association for Research in Astronomy (SARA)</td><td>Optical</td>Tuscon, Arizona<td></td></tr>
+									<tr><td>CTIO 0.6-meter, SARA</td><td>Optical</td><td>CTIO, Chile</td></tr>
+									<tr><td>Roque de los Muchachos 1-meter, SARA</td><td>Optical</td><td>La Palma, Spain</td></tr>
 								</table></p>
 							</section>
 
