--- a/wet.html
+++ b/wet.html
@@ -62,6 +62,9 @@
 									<tr><td>2.1-meter, McDonald Observatory</td><td>Optical</td><td>Fort Davis, Texas</td></tr>
 									<tr><td>Paul and Jane Meyer Observatory</td><td>Optical</td><td>Valley Mills, Texas</td></tr>
 									<tr><td>Steward Observatory</td><td>Optical</td><td>Tucson, Arizona</td></tr>
+									<tr><td>Large Array Survey Telescope</td><td>Optical</td><td>Kibbutz Neot Smadar, Israel</td></tr>
+									<tr><td>University of Hawaii 2.2 meter</td><td>Optical</td><td>Muana Kea, Hawaii</td></tr>
+									<tr><td>Pico dos Dias Observatory</td><td>Optical</td><td>Itajuba, Brazil</td></tr>
 								</table></p>
 							</section>
 
