--- a/wet.html
+++ b/wet.html
@@ -31,7 +31,9 @@
 								<h2>General Run Information</h2>
 								<p>This Whole Earth Telescope (WET) observation campaign is focused on studying the morphology of the debris disk around the pulsating hydrogen atmosphere (DAV) white dwarf G29-38.
 								This project requires concurrent observations at both optical and infrared wavelengths to study G29-38's debris disk. The project’s goal is to investigate the disk’s response to G29-38’s
-								photospheric pulsations and use that information to probe the disk’s morphology.</p>
+								photospheric pulsations and use that information to probe the disk’s morphology. These debris disks are important to our understanding of exoplanet composition and planetary system evolution.
+								Understanding the nature of the dust in the debris disk and the geometry of its distribution is vital to calculate debris masses and lifetimes, and to constrain the mechanisms that resulted in
+								the formation of the disk in the first place. G29-38 provides the perfect target to validate a new methodology to probe the morphology of WD debris disks.</p>
 							</section>
 
               <section id="content" class="main">
