--- a/wet.html
+++ b/wet.html
@@ -29,6 +29,8 @@
 							<section id="content" class="main">
 								<!--span class="image main"><img src="images/pic04.jpg" alt="" /></span-->
 								<h2>General Run Information</h2>
+								<p>Main Campaign Dates: October 13th through October 27th</p>
+								<p>Extended Dates: October 30th through November 6th</p>
 								<p>This Whole Earth Telescope (WET) observation campaign is focused on studying the morphology of the debris disk around the pulsating hydrogen atmosphere (DAV) white dwarf G29-38.
 								This project requires concurrent observations at both optical and infrared wavelengths to study G29-38's debris disk. The project’s goal is to investigate the disk’s response to G29-38’s
 								photospheric pulsations and use that information to probe the disk’s morphology. These debris disks are important to our understanding of exoplanet composition and planetary system evolution.
