--- a/wet.html
+++ b/wet.html
@@ -47,6 +47,7 @@
 								<!--span class="image main"><img src="images/pic04.jpg" alt="" /></span-->
 								<h2>Observations</h2>
 								<p>Primary Target: G29-38</p>
+				  				<p>Secondary Targets: GD 532, PB 7225</p>
 							</section>
 			<section id="content" class="main">
 								<!--span class="image main"><img src="images/pic04.jpg" alt="" /></span-->
