--- a/wet.html
+++ b/wet.html
@@ -78,6 +78,8 @@
 									<tr><td>Large Array Survey Telescope (LAST)</td><td>Optical</td><td>Kibbutz Neot Smadar, Israel</td></tr>
 									<tr><td>University of Hawaii 2.2 meter</td><td>Optical</td><td>Muana Kea, Hawaii, USA</td></tr>
 									<tr><td>Pico dos Dias Observatory (OPD)</td><td>Optical</td><td>Itajuba, Brazil</td></tr>
+									<tr><td>Piszkéstető Observatory</td><td>Optical</td><td>Mátraszentimre, Hungary</td></tr>
+									<tr><td>Amagi Telescope</td><td>Optical</td><td>Amagi, Japan</td></tr>
 								</table></p>
 							</section>
 
