--- a/wet.html
+++ b/wet.html
@@ -22,6 +22,15 @@
 						<h1>XCOV 31</h1>
 					</header>
 
+								<!-- Nav -->
+					<nav id="nav">
+						<ul>
+							<li><a href="xcov31_targets.html" class="active">Targets</a></li>
+							<li><a href="xcov31_telescopes.html">Telescopes</a></li>
+							<li><a href="xcov31_collaborators.html">Collaborators</a></li>
+						</ul>
+					</nav>
+
 				<!-- Main -->
 					<div id="main">
 
