--- a/researchgroup.html
+++ b/researchgroup.html
@@ -37,11 +37,6 @@
 								also did research with Dr. Ed Nowak for the National Eclipse Ballooning Project. I’m the vice president of the Society of Physics Students. In my free 
 								time, I enjoy being around friends and playing my piano. </p>
 								
-								<h2>Henry Sanford-Crane</h2>
-								<p>I am a fourth year Ph.D. student working with Dr. Provencal. With 45 years of experience in  process development engineering, I specialize in CMP
-								technology and bring a wealth of expertise to the field. I hold a Master’s degree in Physics (2023) and am currently pursuing a PhD, focusing on the 
-								spectral evolution of white dwarfs. In my free time you can find me working on my farm, or spending time with my three grandchildren.</p>
-								
 								<h2>Kaylee Grace (she/they)</h2>
 								<p><a href="https://kaygrace.github.io/">Kaylee Grace</a> is a fourth-year graduate student at the University of Delaware, where she works with Dr. 
 								Provencal. They got their undergraduate degrees in Physics (B.S., Honors) and Women’s Gender and Sexuality Studies (B.A.) from the University of 
@@ -63,6 +58,7 @@
 
 							<section id="content" class="main">
 								<h2>Previous Group Members</h2>
+								<p>Henry Sanford-Crane, Spring 2022 - Spring 2025</p>
 								<p>Levi Yost, Spring 2025</p>
 
 					</div>
