--- a/wet.html
+++ b/wet.html
@@ -23,7 +23,7 @@
 					</header>
 
 				<!-- Nav -->
-					<nav>
+					<nav id="nav">
 						<ul>
 							<li><a href="xcov31_targets.html" class="active">Targets</a></li>
 							<li><a href="xcov31_telescopes.html">Telescopes</a></li>
