--- a/xcov31_telescopes.html
+++ b/xcov31_telescopes.html
@@ -20,6 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>XCOV 31 Telescopes</h1>
+					</header>
 						<p>The telescopes providing observations to this campaign are listed below.
 						<table>
 							<tr><th>Telescope</th><th>Type</th><th>Location</th></tr>
