--- a/xcov31_telescopes.html
+++ b/xcov31_telescopes.html
@@ -21,6 +21,7 @@
 					<header id="header">
 						<h1>XCOV 31 Telescopes</h1>
 					</header>
+				<section id="content" class="main">
 						<p>The telescopes providing observations to this campaign are listed below.
 						<table>
 							<tr><th>Telescope</th><th>Type</th><th>Location</th></tr>
@@ -44,7 +45,7 @@
 							<tr><td>Piszkéstető Observatory</td><td>Optical</td><td>Mátraszentimre, Hungary</td></tr>
 							<tr><td>Amagi Telescope</td><td>Optical</td><td>Amagi, Japan</td></tr>
 						</table></p>
-					</header>
+				</section>
 
 				<!-- Main -->
 					<div id="main">
